New freight API (order page and aliexpress.com)

--- a/aer_dmh/popup.html
+++ b/aer_dmh/popup.html
@@ -20,6 +20,13 @@
       <input type="checkbox" id="show_total_cost" name="show_total_cost">
       <label for="show_total_cost">Show total cost (product + delivery)</label>
     </div>
+    <div class="select">
+      <label for="request_method" class="select_label">Request method:</label>
+      <select name="request_method" id="request_method">
+        <option value="com_404">aliexpress.com</option>
+        <option value="order">Order page</option>
+      </select>
+    </div>
     <div>
       <input type="checkbox" id="debug_logging" name="debug_logging">
       <label for="debug_logging">Enable debug logging</label>
